<resources>
    <string name="app_name">night_out</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="button_name_food">Food</string>
    <string name="button_name_drink">Drink</string>
    <string name="button_name_fun">Fun</string>
    <string name="text_label_none">None</string>
    <string name="text_label_defaultLocation">DEFAULT: Lexington, KY</string>
    <string name="text_label_type">Type</string>
    <string name="button_name_dist1">Close</string>
    <string name="text_label_cost">Cost</string>
    <string name="button_name_dist3">Far</string>
    <string name="button_name_dist2">Mid</string>
    <string name="button_name_cost1">$</string>
    <string name="button_name_cost2">$$</string>
    <string name="button_name_cost3">$$$</string>
    <string name="text_label_dist">Distance</string>
    <string-array name="food_types_array">
        <item>Cajun</item>
        <item>Pizza</item>
        <item>Diner</item>
        <item>African</item>
        <item>Sports Bar</item>
        <item>American</item>
        <item>Thai</item>
        <item>Cuban</item>
        <item>Korean</item>
        <item>Japanese</item>
        <item>Steakhouse</item>
        <item>Southern</item>
        <item>Fast Food</item>
    </string-array>
    <string-array name="drink_types_array">
        <item>Bar</item>
        <item>Brewery</item>
        <item>Barcade</item>
        <item>Sports Bar</item>
        <item>Pub</item>
        <item>Whiskey</item>
        <item>Restaurant Bar</item>
        <item>Hotel Bar</item>
    </string-array>
    <string-array name="fun_types_array">
        <item>Horses</item>
        <item>Sports</item>
        <item>Movies</item>
        <item>Park</item>
        <item>Distillery Tour</item>
        <item>Shopping</item>
        <item>Museum</item>
        <item>Kids</item>
        <item>Escape Room</item>
        <item>Activity</item>
    </string-array>
    <string name="title_activity_night_out_map">NightOutMap</string>
    <string name="location_permission_denied">This app requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings.</string>
    <string name="permission_required_toast">Location permission is required for this app.</string>
    <string name="permission_rationale_location">Access to the location service is required.</string>
    <string name="wait_for_async">Loading</string>
    <string name="button_name_apply">Apply</string>
    <string name="button_randomize">Randomize</string>
    <string name="no_results_found">No results found</string>
    <string name="showMap">Show On Map</string>
    <string name="clear">Clear</string>
    <string name="go">Go!</string>
</resources>



